feat: comprehensive codebase review and finalization
- Fix code quality issues identified in three-pass review
- Resolve syntax errors, type annotations, and style violations
- Add missing imports and fix undefined variables
- Improve error handling and resource management
- Update comprehensive README with setup, configuration, and usage
- Add new core modules: app_router, adaptive_quiz, content_generator
- Implement multi-page navigation and enhanced UI components
- Add comprehensive test suite and demo mode functionality
- Fix AttributeError in user profile handling
- Clean up whitespace and formatting issues
- Prepare codebase for production deployment

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@
 # AI CONFIGURATION
 # =============================================================================
 
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# Grok API Configuration
+# Get your API key from: https://console.x.ai/
+GROK_API_KEY=xai-1234567890abcdef1234567890abcdef1234567890abcdef
 
 # AI Model Settings
-AI_MODEL=gpt-3.5-turbo
+AI_MODEL=x-ai/grok-4-fast
 AI_TEMPERATURE=0.7
 AI_MAX_TOKENS=1000
 AI_TOP_P=1.0
